# sumo-output-parsers

./: README.md  pyproject.toml  pytest.ini  sample.py
.circleci/: config.yml
docs/: conf.py  index.rst  modules.rst  sumo_output_parsers.csv_based_parser.rst  sumo_output_parsers.definition_parser.rst  sumo_output_parsers.models.rst  sumo_output_parsers.rst  sumo_output_parsers.tree_parser.rst  sumo_output_parsers.visualizer.rst  tests.csv_based_parser.rst  tests.rst  tests.tree_parser.rst  tests.visualizer.rst
sumo_output_parsers/: __init__.py  fcd_parser.py  loop_detector_parser.py
sumo_output_parsers/definition_parser/: detectors_det_parser.py
sumo_output_parsers/models/: matrix.py  parser.py
sumo_output_parsers/tree_parser/: fcd_parser.py
sumo_output_parsers/visualizer/: detector_positions.py  traffic_animation.py
tests/: conftest.py  test_fcd_parser.py
tests/csv_based_parser/: test_parser.py
tests/resources/: grid.net.xml  grid_detectors.det.xml
tests/resources/output/: fcd-output.xml  loop.out.xml  statistic-output.xml
tests/tree_parser/: test_fcd_parser.py  test_loop_detector_parser.py
tests/visualizer/: test_detector_positions.py  test_route_visualizer.py  test_traffic_animation.py
