[tool.poetry]
name = "sumo_output_parsers
version = "0.1"
description = ""
authors = ["Kensuke Mitsuzawa <kensuke.mit@gmail.com>"]
maintainers = ["Kensuke Mitsuzawa <kensuke.mit@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = ""

[tool.poetry.dependencies]
python = "^3.6.1"
dataclasses = "*"
nptyping = "^1.4.1"
numpy = "*"
scikit-learn = "*"
scipy = "*"
Cython = "*"
h5py = "*"
tabulate = "*"
pandas = "*"
tqdm = "^4.61.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-resource-path = "^1.3.0"
nbmake = "0.5"
pytest-parallel = "*"

[tool.poetry.scripts]

[build-system]
requires = ["setuptools", "poetry", "poetry_core>=1.0", "cython"]
build-backend = "poetry.core.masonry.api"
